Bug 395844 - Autocompletion popup doesn't work
Summary: Autocompletion popup doesn't work
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: sage-backend (other bugs)
Version First Reported In: 18.04
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Filipe Saraiva
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-25 06:12 UTC by Antonio Rojas
Modified: 2018-07-01 18:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In: 18.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2018-06-25 06:12:10 UTC
Using Cantor 18.04.2 with 7e4d081956a1aa258683ff408437ab09cc0311c1

Pressing <tab> in the middle of a command doesn't show the autocomplete popup. The console output shows that the completions are being retrieved correctly, but they are not displayed in the UI.
Comment 1 Nikita Sirgienko 2018-06-26 20:58:17 UTC
Git commit 254761a6ec1d29a5912163d8ed42a730071ed5a1 by Nikita Sirgienko.
Committed on 26/06/2018 at 20:54.
Pushed by sirgienko into branch 'master'.

Fix bug with autocomplete popup in Sage backend
FIXED-IN: 18.04.3

M  +1    -1    src/backends/sage/sagecompletionobject.cpp

https://commits.kde.org/cantor/254761a6ec1d29a5912163d8ed42a730071ed5a1
Comment 2 Nikita Sirgienko 2018-07-01 18:39:49 UTC
Git commit a94e5135d4f4939af5d96678bbe4b4f2cb636927 by Nikita Sirgienko.
Committed on 01/07/2018 at 18:18.
Pushed by sirgienko into branch 'Applications/18.04'.

Fix bug with autocomplete popup in Sage backend
FIXED-IN: 18.04.3

M  +1    -1    src/backends/sage/sagecompletionobject.cpp

https://commits.kde.org/cantor/a94e5135d4f4939af5d96678bbe4b4f2cb636927