Fix bug with autocomplete popup in Sage backend

BUG: 395844
FIXED-IN: 18.04.3